添加 扩展库中的覆盖物

--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "rc-bmap",
   "version": "0.1.0",
   "main": "lib/index.js",
-  "dependencies": {},
+  "dependencies": {
+    "bmaplib.curveline": "^1.0.0",
+    "bmaplib.heatmap": "^1.0.4",
+    "bmaplib.lushu": "^1.0.7",
+    "bmaplib.markerclusterer": "^1.0.13"
+  },
   "scripts": {
     "build:lib": "rm -rf lib && babel src -d lib",
     "build:dist": "webpack",
