--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rc-bmap",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "main": "lib/index.js",
   "typings": "types/index.d.ts",
   "repository": {
@@ -17,8 +17,8 @@
   ],
   "files": [
     "src",
-    "lib/*.js",
-    "types/*.d.ts"
+    "lib",
+    "types"
   ],
   "homepage": "https://bmap.jser-club.com",
   "dependencies": {
