--- a/examples/package.json
+++ b/examples/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "NODE_ENV=production && webpack --config config/webpack.prod.js",
+    "build": "export NODE_ENV=production && webpack --config config/webpack.prod.js",
     "dev": "webpack-dev-server --config config/webpack.dev.js"
   },
   "author": "",
