--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rc-bmap",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "main": "lib/index.js",
   "typings": "types/index.d.ts",
   "repository": {
@@ -28,6 +28,7 @@
   },
   "scripts": {
     "build": "rm -rf lib && babel src -d lib",
+    "build:dist": "webpack",
     "prepublish": "npm run build",
     "pub": "npm run prepublish && npm publish",
     "precommit": "lint-staged"
