--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rc-bmap",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "main": "lib/index.js",
   "typings": "types/index.d.ts",
   "repository": {
@@ -18,7 +18,8 @@
   "files": [
     "src",
     "lib",
-    "types"
+    "types",
+    "dist"
   ],
   "homepage": "https://bmap.jser-club.com",
   "dependencies": {
@@ -29,7 +30,7 @@
   "scripts": {
     "build": "rm -rf lib && babel src -d lib",
     "build:dist": "webpack",
-    "prepublish": "npm run build",
+    "prepublish": "npm run build:dist && npm run build",
     "pub": "npm run prepublish && npm publish",
     "precommit": "lint-staged"
   },
