--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,7 @@
   },
   "rules": {
     "import/no-extraneous-dependencies": "off",
-    "no-param-reassign": "warn",
+    "no-param-reassign": "off",
     "react/prop-types": "off",
     "no-underscore-dangle": "warn",
     "global-require": "warn",
