--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
     "global-require": "warn",
     "react/jsx-filename-extension": "off",
     "react/require-default-props": "off",
-    "react/forbid-prop-types": "off"
+    "react/forbid-prop-types": "off",
+    "react/destructuring-assignment": "off"
   }
 }
