--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "license": "MIT",
   "homepage": "https://bmap.jser-club.com",
   "dependencies": {
-    "lodash.isequal": "^4.5.0"
+    "lodash.isequal": "^4.5.0",
+    "prop-types": "^15.6.2"
   },
   "scripts": {
     "build": "rm -rf lib && babel src -d lib",
