fix:  RegeneratorRuntime is not defined when the project does not reference babel-polyfill

--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,8 @@
     "stage-0"
   ],
   "plugins": [
-    "transform-decorators-legacy"
+    "transform-runtime",
+    "transform-decorators-legacy",
+    "babel-plugin-transform-regenerator"
   ]
 }
