--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,7 @@
     "react/jsx-filename-extension": "off",
     "react/require-default-props": "off",
     "react/forbid-prop-types": "off",
-    "react/destructuring-assignment": "off"
+    "react/destructuring-assignment": "off",
+    "react/no-array-index-key": "off"
   }
 }
