--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rc-bmap",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "main": "lib/index.js",
   "repository": {
     "type": "git",
@@ -20,7 +20,7 @@
     "types"
   ],
   "license": "MIT",
-  "homepage": "https://bmap.jser-club.com",
+  "homepage": "http://jser.wang/bmap",
   "dependencies": {
     "babel-plugin-transform-regenerator": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
